--- a/css/custom.css
+++ b/css/custom.css
@@ -39,14 +39,14 @@
 }
 
 .carousel .carousel-item {
-  height: 50vh;
+  height: 550px;
 }
 
 .carousel-item img {
     position: absolute;
     top: 0;
     left: 0;
-    min-height: 50vh;
+    min-height: 550px;
 }
 
 
