--- a/css/custom.css
+++ b/css/custom.css
@@ -253,8 +253,18 @@ body, html {
   }
 }
 
-
 .atasan {
   width: 100%;
   height: 500px;
 }
+
+.motodiv {
+  padding: 10px;
+  height: 400px;
+}
+
+.berita {
+  height: 400px;
+}
+
+
