--- a/Profil/profil.css
+++ b/Profil/profil.css
@@ -20,7 +20,7 @@ body{
     box-sizing: border-box;
 }
 .row h1{
-    color: #fff;
+    color: black;
     text-align: center;
     padding: 0;
     margin: 0;
@@ -30,7 +30,7 @@ body{
 }
 .row p{
     margin: 20px 0 0 ;
-    color: #fff;
+    color: gray;
     padding-left: 20px;
     border-left: 5px solid #f00;
 }
@@ -89,7 +89,7 @@ body{
 .row .column:hover .details{
     bottom: 0;
 }
-.row .column .details h3{
+.row .column .details h4{
     margin: 0;
     padding: 0;
     color: #fff;
