--- a/Login/Login.css
+++ b/Login/Login.css
@@ -1,8 +1,8 @@
 body{
-	margin: 0;
-	padding: 0;
+	margin: 200px;
+	padding: 100px;
 	font-family: sans-serif;
-	background: #34495e;
+	background-image: url(d1.png); 
 
 }
 .box{
@@ -14,6 +14,9 @@ body{
 	transform: translate(-50%,-50%);
 	background: #191919;
 	text-align: center;
+	opacity: 0.85;
+	border-radius: 13px;
+
 }
 .box h1{
 	color: white;
@@ -32,7 +35,7 @@ body{
 	display: block;
 	margin: 20px auto;
 	text-align: center;
-	border: 2px solid #3498db;
+	border: 2px solid #c94d10;
 	padding: 14px 14px;
 	width: 200px;
 	outline: none;
