--- a/Profil/profil.css
+++ b/Profil/profil.css
@@ -30,7 +30,7 @@ body{
 }
 .row p{
     margin: 20px 0 0 ;
-    color: gray;
+    color: grey;
     padding-left: 20px;
     border-left: 5px solid #f00;
 }
@@ -42,7 +42,7 @@ body{
     position: relative;
     width: calc(23% - 60px);
     min-height: 250px;
-    background: #fff;
+    background: grey;
     float: left;
     box-sizing: border-box;
     overflow: hidden;
@@ -53,9 +53,9 @@ body{
     position: absolute;
     bottom:-100%;
     left: 0;
-    width: 100%;
+    wKBidth: 100%;
     height: 100%;
-    background: rgba(255,0,0,1);
+    background: grey;
     z-index: 1;
     transition: .5s;
     mix-blend-mode: soft-light;
@@ -125,7 +125,7 @@ body{
 }
 .row .column .details ul li a:hover .fab{
     transform: rotateY(360deg);
-    color: #f00;
+    color: grey;
 }
 @media (max-width: 992px){
     .container{
