--- a/css/custom.css
+++ b/css/custom.css
@@ -319,3 +319,8 @@ body, html {
   margin-left: 20px;
   margin-right: 20px;
 }
+
+.kanan {
+  clip-path: polygon(30% 0%, 100% 0%, 100% 100%, 0% 100%);
+  position: static;
+}
